@@ -5,9 +5,9 @@
     <Package name="C" />
     <Package name="Clang" version="Xcode4" />
     <Package name="Clang" version="Xcode5" />
-    <Package name="Clang" version="Xcode6" default="true" />
+    <Package name="Clang" version="Xcode6" />
     <Package name="Clang" version="Xcode7" />
-    <Package name="Clang" version="Xcode8" />
+    <Package name="Clang" version="Xcode8" default="true" />
     <Package name="MakeFileBuilder" />
     <Package name="NativeBuilder" />
     <Package name="Publisher" />
