@@ -4,9 +4,9 @@
   <Dependents>
     <Package name="Clang" version="Xcode4" />
     <Package name="Clang" version="Xcode5" />
-    <Package name="Clang" version="Xcode6" default="true" />
+    <Package name="Clang" version="Xcode6" />
     <Package name="Clang" version="Xcode7" />
-    <Package name="Clang" version="Xcode8" />
+    <Package name="Clang" version="Xcode8" default="true" />
     <Package name="Gcc" version="4.8" default="true" />
     <Package name="Gcc" version="5.4" />
     <Package name="NativeBuilder" />
